# slint_wgpu_test

./: Cargo.toml  build.rs
src/: main.rs  shader.wgsl
ui/: scene.slint
