[package]
name = "slint_test"
version = "0.0.0"
edition = "2024"
build = "build.rs"

[dependencies.bytemuck]
version = "1"
features = ["derive"]

[dependencies.slint]
version = "1"
default-features = false
features = ["backend-winit", "compat-1-2", "unstable-wgpu-24"]

[build-dependencies]
slint-build = "1"
